--- a/.github/workflows/sitemap.yml
+++ b/.github/workflows/sitemap.yml
@@ -18,7 +18,12 @@ jobs:
           npm install -g sitemap-generator-cli
           sitemap-generator https://pandyadeval.github.io/ --output ./sitemap.xml
       - name: Commit sitemap
+        env:
+          GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}
+          GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
         run: |
+          git config --global user.name "$GIT_USER_NAME"
+          git config --global user.email "$GIT_USER_EMAIL"
           git add sitemap.xml
           git commit -m "Generate sitemap"
           git push
