--- a/.github/workflows/sitemap.yml
+++ b/.github/workflows/sitemap.yml
@@ -1,29 +1,31 @@
-name: Generate Sitemap
+name: Generate xml sitemap
 
 on:
   push:
     branches:
-      - main
-      - iPortfolio-main
-      - 11ty-iPortfolio-main
+    - main
+    - iPortfolio-main
+    - 11ty-iPortfolio-main
 
 jobs:
-  build:
+  sitemap_job:
     runs-on: ubuntu-latest
+    name: Generate a sitemap
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Generate sitemap
-        run: |
-          npm install -g sitemap-generator-cli
-          sitemap-generator https://pandyadeval.github.io/ --output ./sitemap.xml
-      - name: Commit sitemap
-        env:
-          GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}
-          GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
-        run: |
-          git config --global user.name "$GIT_USER_NAME"
-          git config --global user.email "$GIT_USER_EMAIL"
-          git add sitemap.xml
-          git commit -m "Generate sitemap"
-          git push
+    - name: Checkout the repo
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0 
+
+    - name: Generate the sitemap
+      id: sitemap
+      uses: cicirello/generate-sitemap@v1
+      with:
+        base-url-path: https://pandyadeval.github.io/
+
+    - name: Output stats
+      run: |
+        echo "sitemap-path = ${{ steps.sitemap.outputs.sitemap-path }}"
+        echo "url-count = ${{ steps.sitemap.outputs.url-count }}"
+        echo "excluded-count = ${{ steps.sitemap.outputs.excluded-count }}"
