--- a/.github/workflows/sitemap.yml
+++ b/.github/workflows/sitemap.yml
@@ -9,9 +9,7 @@ name: generate-xml-sitemap
 on:
   push:
     branches:
-    - main
-    - iPortfolio-main
-    - 11ty-iPortfolio-main
+    - 11ty-iPortfolio-dev
 
 jobs:
   sitemap_job:
@@ -21,17 +19,26 @@ jobs:
     steps:
     - name: Checkout the repo
       uses: actions/checkout@v4
-      with:
-        fetch-depth: 0 
+      
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v4.0.4
 
-    - name: Generate the sitemap
-      id: sitemap
-      uses: cicirello/generate-sitemap@v1
-      with:
-        base-url-path: https://pandyadeval.github.io/
+    - name: Run sitemap-generator
+      run: npx sitemap-generator-cli https://pandyadeval.github.io/ -p "1.0,0.5"
 
-    - name: Output stats
+    - name: Move generated sitemap
+      run: mv sitemap docs/.
+
+    - name: Check for sitemap changes
       run: |
-        echo "sitemap-path = ${{ steps.sitemap.outputs.sitemap-path }}"
-        echo "url-count = ${{ steps.sitemap.outputs.url-count }}"
-        echo "excluded-count = ${{ steps.sitemap.outputs.excluded-count }}"
+        git diff --exit-code docs/sitemap.xml || echo "Sitemap has changed."
+
+    # Commit and push the sitemap if there are changes
+    - name: Commit sitemap
+      if: ${{ always() && steps.diff.outputs.changed == 'true' }} # Only commit if changes detected
+      run: |
+        git config --global user.name ${{ GIT_USER_NAME }}
+        git config --global user.email ${{ GIT_USER_EMAIL }}
+        git add docs/sitemap.xml
+        git commit -m "Updated Sitemap" || echo "No changes to commit"
+        git push origin ${{ github.ref }}
