--- a/.github/workflows/sitemap.yml
+++ b/.github/workflows/sitemap.yml
@@ -35,7 +35,7 @@ jobs:
 
     # Commit and push the sitemap if there are changes
     - name: Commit sitemap
-      if: ${{ always() && steps.diff.outputs.changed == 'true' }} # Only commit if changes detected
+      if: ${{ always() && steps.diff.outputs.changed == 'true' }}
       run: |
         git config --global user.name ${{ GIT_USER_NAME }}
         git config --global user.email ${{ GIT_USER_EMAIL }}
