--- a/.github/workflows/sitemap.yml
+++ b/.github/workflows/sitemap.yml
@@ -1,20 +1,22 @@
 name: generate-xml-sitemap
 
-# on:
-#   workflow_run:
-#     workflows: ["pages-build-deployment"]  # Name of your publishing workflow
-#     types:
-#       - completed
-
 on:
-  push:
-    branches:
-    - 11ty-iPortfolio-dev
+  workflow_run:
+    workflows: [pages-build-deployment]  # Name of your publishing workflow
+    types: [completed]
+    branches: [11ty-iPortfolio-main]
+
+# on:
+#   push:
+#     branches:
+#     - 11ty-iPortfolio-dev
 
 jobs:
   sitemap_job:
     runs-on: ubuntu-latest
     name: Generate a sitemap
+
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
     - name: Checkout the repo
