--- a/.github/workflows/custom-github-pages.yml
+++ b/.github/workflows/custom-github-pages.yml
@@ -41,3 +41,28 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+      
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v4.0.4
+
+      - name: Run sitemap-generator
+        run: npx sitemap-generator-cli https://pandyadeval.github.io/ -p "1.0,0.5"
+
+      - name: Move generated sitemap
+        run: |
+          ls -ltr sitemap.xml
+          mv sitemap.xml docs/.
+
+      - name: Check for sitemap changes
+        run: |
+          git diff --exit-code docs/sitemap.xml || echo "Sitemap has changed."
+
+      # Commit and push the sitemap if there are changes
+      - name: Commit sitemap
+        if: ${{ always() && steps.diff.outputs.changed == 'true' }}
+        run: |
+          git config --global user.name ${{ secrets.GIT_USER_NAME }}
+          git config --global user.email ${{ secrets.GIT_USER_EMAIL }}
+          git add docs/sitemap.xml
+          git commit -m "Updated Sitemap" || echo "No changes to commit"
+          git push origin ${{ github.ref }}
