--- a/.github/workflows/custom-github-pages.yml
+++ b/.github/workflows/custom-github-pages.yml
@@ -54,13 +54,17 @@ jobs:
           mv sitemap.xml docs/.
 
       - name: Check for sitemap changes
+        id: diff
         run: |
-          git diff --exit-code docs/sitemap.xml || echo "Sitemap has changed."
-          echo ${{ steps.diff }}
+          if git diff --exit-code docs/sitemap.xml; then
+            echo "changed=false" >> $GITHUB_ENV
+          else
+            echo "changed=true" >> $GITHUB_ENV
+        continue-on-error: true
 
       # Commit and push the sitemap if there are changes
       - name: Commit sitemap
-        if: ${{ always() && steps.diff.outputs.changed == 'true' }}
+        if: env.changed == 'true'
         run: |
           git config --global user.name ${{ secrets.GIT_USER_NAME }}
           git config --global user.email ${{ secrets.GIT_USER_EMAIL }}
