--- a/.github/workflows/custom-github-pages.yml
+++ b/.github/workflows/custom-github-pages.yml
@@ -56,15 +56,16 @@ jobs:
       - name: Check for sitemap changes
         id: diff
         run: |
-          if git diff --exit-code docs/sitemap.xml; then
+          if git diff --exit-code sitemap.xml; then
             echo "changed=false" >> $GITHUB_ENV
           else
             echo "changed=true" >> $GITHUB_ENV
+          fi
         continue-on-error: true
 
       # Commit and push the sitemap if there are changes
       - name: Commit sitemap
-        if: env.changed == 'true'
+        if: ${{ always() && steps.diff.outputs.changed == 'true' }}
         run: |
           git config --global user.name ${{ secrets.GIT_USER_NAME }}
           git config --global user.email ${{ secrets.GIT_USER_EMAIL }}
