--- a/.github/workflows/custom-github-pages.yml
+++ b/.github/workflows/custom-github-pages.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Check for sitemap changes
         id: diff
         run: |
-          if git diff --exit-code sitemap.xml; then
+          if git diff --exit-code docs/sitemap.xml; then
             echo "changed=false" >> $GITHUB_ENV
           else
             echo "changed=true" >> $GITHUB_ENV
